--- a/publications.qmd
+++ b/publications.qmd
@@ -4,7 +4,10 @@ title: "Publications"
 
 ## Peer Reviewed Publications
 
-1.  Glasenapp, MR and GH Pogson (2023). Extensive Introgression among Strongylocentrotid Sea Urchins Revealed by Phylogenomics. *Ecology and Evolution*.
-2.  Glasenapp, MR and GH Pogson (In Prep). Selection shapes the genomic landscape of introgressed ancestry in a pair of sympatric sea urchin species.
-3.  Santiago, NA, Glasenapp, MR and SL Howard (2022). Dose-Response in Context: A Backward Design, Inquiry Activity Workshop for College Transfer Students. *eScholarship*.
-4.  Hornbach, DJ, MC Hove, MW Ensley-Field, MR Glasenapp, et al. (2017). Comparison of ecosystem processes in a woodland and prairie pond with different hydroperiods. *Journal of Freshwater Ecology*.
+1.  Glasenapp, MR and GH Pogson (*in review*). Selection shapes the genomic landscape of introgressed ancestry in a pair of sympatric sea urchin species. <https://doi.org/10.1101/2023.12.01.566927>.
+
+2.  Glasenapp, MR and GH Pogson (2023). Extensive introgression among strongylocentrotid sea urchins revealed by phylogenomics. *Ecology and Evolution*. <https://doi.org/10.1002/ece3.10446>.
+
+3.  Santiago, NA, Glasenapp, MR and SL Howard (2022). Dose-response in context: A backward design, inquiry activity workshop for college transfer students. *eScholarship*. <https://escholarship.org/uc/item/28r6g3kf>.
+
+4.  Hornbach, DJ, MC Hove, MW Ensley-Field, MR Glasenapp, et al. (2017). Comparison of ecosystem processes in a woodland and prairie pond with different hydroperiods. *Journal of Freshwater Ecology*. <https://doi.org/10.1080/02705060.2017.1393468>.
